--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@
     overflow-x: hidden;
     
  }
- 
+ .container{
+    width: 1200px;
+    margin: 0 auto;
+ }
   
 .navbar{
     display: flex;
@@ -548,7 +551,7 @@ This space is for media querys
     font-size: 15em;
     font-style: bold;
     color:rgb(231,231,231);
-    bottom:-34%;
+    bottom:-29%;
     /* right: 1px; */
     user-select: none;
     overflow-x:hidden ;
@@ -620,4 +623,91 @@ This space is for media querys
     font-size: 2rem;
     padding:2rem;
     color:#343d68aa ;
+    text-transform: capitalize;
+}
+.contactus-heading,.contactus-subheading{
+    line-height:0em;
+    
+}
+.contactus-form-container{
+    margin-top: 25px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.form{
+display: flex;
+flex-direction: column;
+}
+
+.formfield-container{
+width: 100%;
+}
+.fromfield{
+    width: 70%;
+    height: 40px;
+    padding:0 2rem;
+    font-size: 18px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px #1f1f1f;
+    border: none;
+    margin-top: 10px;
+
+}
+#submit-btn{
+    border: none;
+    font-size: 1rem;
+    margin: 2rem 0;
+    font-size:medium;
+}
+#submit-btn:hover{
+    transition: ease-in-out;
+    scale: 1.1 ;
+}
+ /* .submit-icon{ 
+       padding:0 1rem;
+       font-size: 1rem;
+}  */
+
+footer{
+    position: relative;
+    margin-top: -1px;
+    background-color: #343d68;
+}
+.footer-wrapper{
+    display: flex;
+    gap:1rem;
+    padding:1rem;
+    justify-content: space-between;
+    align-items: center;
+}
+ .footer-faded-text{
+    position: relative;
+    left: 0;
+    color: #a9a9a9;
+    bottom: 0;
+    user-select: none;
+    font-size:3rem ;
+    /* padding-top: 50%; */
+ }
+ .link-wrapper{
+    display: flex;
+    gap: 1.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.link-wrapper div a{
+    color: whitesmoke ;
+    text-decoration: none;
+    transition: all 0.6s;
+}
+.link-wrapper div a:hover{
+    color: rgb(20, 160, 220);
+}
+
+
+.icon-wrapper{
+    color: #fffcfc;
+
 }
